# cibrrig

./: .gitignore  .readthedocs.yaml  COMPRESSED_ARCHIVE_SUPPORT.md  IBLLIB_3_COMPATIBILITY.md  UPDATE_INSTRUCTIONS.md  main_pipeline.py  plot.py  pyproject.toml  readme.md  requirements.txt  setup.py  test_ibllib_compatibility.py
_wirings/: _anesthetized_nidq.wiring.json  _awake_nidq.wiring.json  imec.wiring.json  nidq.wiring.json
archiving/: backup.py  ephys_data_to_alf.py  readme.md
cibrrig/: gui.py  main_pipeline.py  pipeline_from_archive.py  plot.py  run_sasquatch.py  videos.py
cibrrig/analysis/: population.py  readme.md  singlecell.py
cibrrig/archiving/: backup.py  ephys_data_to_alf.py  readme.md  tarball_spikeinterface.py
cibrrig/postprocess/: README.md  concatenate_triggers.py  convert_ks_to_alf.py  extract_chronux.py  extract_coherence.py  extract_resp_modulation.py  optotag.py  synchronize_sorting_to_aux.py
cibrrig/preprocess/: README.md  compress_video.py  extract_frame_times.py  extract_opto_times.py  extract_physiology.py  extract_sync_times.py  multi_pipeline.py  nidq_utils.py  physiology.py  preproc_pipeline.py  preproc_pipeline.py.backup
cibrrig/sorting/: README.md  export_to_alf.py  spikeinterface_ks4.py
cibrrig/utils/: alf_utils.py  spikeglx_utils.py  utils.py
docs/: api.rst  cibrrig.analysis.rst  cibrrig.archiving.rst  cibrrig.postprocess.rst  cibrrig.preprocess.rst  cibrrig.rst  cibrrig.sorting.rst  cibrrig.utils.rst  conf.py  index.rst  modules.rst
docs/source/: conf.py  index.rst
hardware/: readme.md
hardware/pyExperimentControl/: readme.md
postprocess/: README.md  concatenate_triggers.py  convert_ks_to_alf.py  extract_coherence.py  optotag.py  python_CHRONUX.m
preprocess/: README.md  breathmetrics_proc.m  extract_frame_times.py  extract_opto_times.py  extract_physiology.py  extract_sync_times.py  nidq_utils.py  physiology.py  pipeline.py
sorting/: spikeinterface_ks4.py
tests/: __init__.py  test_compressed_archive.py
utils/: alf_utils.py
