[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cibrrig"
version = "0.8.1"
description = "Tools for data analysis and organization of Neuropixel data recorded on the CIBR rig at SCRI. Influenced by the IBL"
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    {name = "Nicholas E. Bush"}
]
dependencies = [
    "ibllib==3.13.0",
    "spikeinterface==0.103.0", 
    "ipython",
    "myst-parser",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "oursin",
    "kilosort[gui]==4.1.0",
]

[project.scripts]
backup = "cibrrig.archiving.backup:main"
npx_preproc = "cibrrig.preprocess.preproc_pipeline:cli"
npx_run_all = "cibrrig.main_pipeline:main"
ephys_to_alf = "cibrrig.archiving.ephys_data_to_alf:cli"
spikesort = "cibrrig.sorting.spikeinterface_ks4:cli"
convert_ks_to_alf = "cibrrig.postprocess.convert_ks_to_alf:main"
ephys_qc = "cibrrig.preprocess.preproc_pipeline:runQC"

[tool.setuptools.packages.find]
exclude = ["_wirings", ".vscode"]

[tool.setuptools]
include-package-data = true
